# ppd-egui

./: .gitignore  Cargo.toml  flake.nix
src/: dbus.rs  main.rs  state.rs  toggle_switch.rs  ui.rs
